Fix breakages with Bazel@HEAD and incompatible flags (#4368)
**What type of PR is this?**

Adapt to a Bazel breaking change

**What does this PR do? Why is it needed?**

The `local_config_platform` repo is no longer available with Bazel@HEAD,
so the host constraints have to be loaded from `@platforms//host`.

Also prepare the BCR test repo for Bazel@HEAD with
`--incompatible_autoload_externally=` by applying buildifier lint fixes.

**Which issues(s) does this PR fix?**

**Other notes for review**

--- a/go/tools/bazel_benchmark/WORKSPACE.in
+++ b/go/tools/bazel_benchmark/WORKSPACE.in
@@ -17,6 +17,15 @@ go_rules_dependencies()
 
 go_register_toolchains(go_version = "host")
 
+# Create the host platform repository transitively required by rules_go.
+load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")
+load("@platforms//host:extension.bzl", "host_platform_repo")
+
+maybe(
+	host_platform_repo,
+	name = "host_platform",
+)
+
 load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
 
 gazelle_dependencies()
