--- a/tests/bcr/MODULE.bazel
+++ b/tests/bcr/MODULE.bazel
@@ -20,6 +20,7 @@ local_path_override(
 
 bazel_dep(name = "gazelle", version = "0.33.0")
 bazel_dep(name = "protobuf", version = "3.19.6")
+bazel_dep(name = "rules_shell", version = "0.4.1")
 
 # Required with --incompatible_enable_proto_toolchain_resolution.
 # Avoids building protoc from source, which speeds up CI runs.
