Compute rpath correctly with nested bazel modules (#4390)
**What type of PR is this?**

Bug fix

**What does this PR do? Why is it needed?**

My company has a complicated, uncommon bazel set up with nested bazel
modules. We also use cgo extensively and have many go tests and binaries
that end up linking to shared C++ libraries generated via other bazel
modules. When such go tests are run with rbe, they fail due to failure
to locate the shared libraries within the runfiles directory.

On deeper investigation, I found that the existing `rpath` computation
assumes that both the executable and the library are present within the
working directory. In reality, the executable is present outside the
working directory but within the runfiles directory.

Normalizing the paths with respect to the runfiles directory fixes the
issue.

Relevant links:
- https://github.com/bazelbuild/bazel/issues/14307

**Other notes for review**

I added a test to verify that rpath computation works with nested
modules. In fairness, this mainly guarantees that there's no regression
in existing functionality as the test passes even without my fix. So
far, I've not been able to produce a minimum example that showcases the
problem.

Existing tests in tests/core/cgo also exercise rpath computation.

---------

Co-authored-by: Dhiraj Goel <dhirajgoel@intrinsic.ai>
Co-authored-by: Fabian Meumertzheim <fabian@meumertzhe.im>

--- a/tests/bcr/BUILD.bazel
+++ b/tests/bcr/BUILD.bazel
@@ -83,3 +83,20 @@ sdk_transition_test(
     binary = ":wrap_test",
     sdk_version = "1.23.6",
 )
+
+go_library(
+    name = "cgonested",
+    srcs = ["cgo_nestedmod.go"],
+    cdeps = [
+        "@other_module//:bar_shared",
+    ],
+    cgo = True,
+)
+
+go_test(
+    name = "cgonested_test",
+    srcs = ["cgo_nestedmod_test.go"],
+    embed = [":cgonested"],
+    # TODO: temporarily enabled only for linux.
+    target_compatible_with = ["@platforms//os:linux"],
+)
