Add support for `--incompatible_compact_repo_mapping_manifest` (#4375)
**What type of PR is this?**

Feature

**What does this PR do? Why is it needed?**

Implements support for the new format added in
https://github.com/bazelbuild/bazel/issues/26262.

**Which issues(s) does this PR fix?**

Fixes #

**Other notes for review**

--- a/tests/runfiles/BUILD.bazel
+++ b/tests/runfiles/BUILD.bazel
@@ -43,6 +43,14 @@ go_test(
     ],
 )
 
+go_test(
+    name = "runfiles_internal_test",
+    srcs = [
+        "runfiles_internal_test.go",
+    ],
+    embed = ["//go/runfiles"],
+)
+
 go_bazel_test(
     name = "runfiles_bazel_test",
     srcs = ["runfiles_bazel_test.go"],
