Support integration test coverage system (coverageredesign) (#4397)
go1.25 removes the current runtime code coverage system adopted by
rules_go (nocoverageredesign)
https://go-review.googlesource.com/c/go/+/644997
which makes rules_go incompatible with the latest upcoming version of
go.

The change completely adopts the new integration test friendly
coverageredesign
system (https://go.dev/blog/integration-test-coverage) in rules_go.

Below I describe how the current rules_go coverage system currently
works, what
changes in the new coverage redesign, and what needs to change as a
result in
rules_go.

How nocoverageredesign currently works:

- rules_go invokes `go tool cover` to generate instrumented source files
that
are then passed to the Go compiler (in compilepkg.go). Instrumented
source
files update generated package variable counters.

- The rules_go generated test main (generate_test_main.go) calls
testing.RegisterCover to set a global variable that tracks references to
coverage generated package local variables that coverage instrumented
code
modify (ref:
https://github.com/golang/go/blob/go1.24.5/src/testing/cover.go#L72)
This replicates the behavior in go test's generated test main
(cmd/go/internal/load/test.go)

- rules_go specially adds a call to coverdata.RegisterFile call to all
coverage
instrumented files which connects each of the file coverage counter
variables
with a global object and enables rules_go to customize the file name
that
coverage variables are associated with.

- It's important to note that because rules_go accesses to this global
coverage struct,
it's able to manipulate the file path name associated with coverage
counter variables.
This is important because the lcov format that bazel uses expect exec
root relative files.

- When a test exits, This global object is flushed in a call to
`testing.coverReport()` to
generate a coverage report. This reports gets written a file configured
in
test.coverprofile flag.

- Via a special SetPanicOnEx

--- a/go/tools/bzltestutil/BUILD.bazel
+++ b/go/tools/bzltestutil/BUILD.bazel
@@ -11,7 +11,10 @@ go_tool_library(
     ],
     importpath = "github.com/bazelbuild/rules_go/go/tools/bzltestutil",
     visibility = ["//visibility:public"],
-    deps = ["//go/tools/bzltestutil/chdir"],
+    deps = [
+        "//go/tools/bzltestutil/chdir",
+        "//go/tools/coverdata",
+    ],
 )
 
 go_test(
