--- a/tests/core/cross/BUILD.bazel
+++ b/tests/core/cross/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library", "go_test")
 load("@io_bazel_rules_go//go/tools/bazel_testing:def.bzl", "go_bazel_test")
+load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")
 load(":def.bzl", "no_context_info")
 
 test_suite(
@@ -12,9 +13,8 @@ go_binary(
     goarch = "amd64",
     goos = "darwin",
     pure = "off",
-    target_compatible_with = ["@platforms//os:macos"],
     deps = [":platform_lib"],
-)
+) if "@platforms//os:osx" in HOST_CONSTRAINTS else None
 
 go_binary(
     name = "windows_cross",
