Include blackbox tests in compilation_outputs group (#4437)
**What type of PR is this?**

> Bug fix

**What does this PR do? Why is it needed?**

The PR makes external test archive included in `compilation_outputs`
output group. This is necessary because currently, e.g., `bazel build
--output_groups=compilation_outputs //foo/bar:bar_test` won't build test
files that have `package bar_test` in them.

**Other notes for review**

[Slack
context](https://bazelbuild.slack.com/archives/CDBP88Z0D/p1756742089621919)

--- a/tests/core/output_groups/BUILD.bazel
+++ b/tests/core/output_groups/BUILD.bazel
@@ -8,7 +8,10 @@ go_library(
 
 go_test(
     name = "lib_test",
-    srcs = ["lib_test.go"],
+    srcs = [
+        "lib_blackbox_test.go",
+        "lib_test.go",
+    ],
     embed = [":lib"],
 )
 
