Fix Stardoc in repos which use rules_go with Bazel 8+ (#4446)
Fixes https://github.com/bazel-contrib/rules_go/issues/4394

Requires bumping rules_cc dep (and making it a dep for legacy WORKSPACE
users).

<!-- Thanks for sending a PR! Before submitting:

1. If this is your first PR, please read CONTRIBUTING.md and sign the
CLA
   first. We cannot review code without a signed CLA.
2. Please file an issue *first*. All features and most bug fixes should
have
an associated issue with a design discussed and decided upon. Small bug
   fixes and documentation improvements don't need issues.
3. New features and bug fixes must have tests. Documentation may need to
be updated. If you're unsure what to update, send the PR, and we'll
discuss
   in review.
4. Note that PRs updating dependencies and new Go versions are not
accepted.
   Please file an issue instead.
-->

**What type of PR is this?**

Bug fix

**What does this PR do? Why is it needed?**

Fixes Stardoc API doc generation when using Bazel 8 for .bzl files in
repos which transitively depend upon rules_go

**Which issues(s) does this PR fix?**

Fixes #4394 and https://github.com/bazelbuild/stardoc/issues/300

**Other notes for review**

You can test the code via

```bash
cd ..
mkdir test
cd test
cat >MODULE.bazel <<EOF
bazel_dep(name = "rules_go", version = "0.57.0")
local_path_override(module_name = "rules_go", path = "../rules_go")
bazel_dep(name = "stardoc", version = "0.8.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
EOF

cat >BUILD <<EOF
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

bzl_library(
    name = "my_rule",
    srcs = ["my_rule.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@rules_go//go:def"],
)

stardoc(
    name = "my_rule_docs",
    out = "my_rule.md",
    input = "my_rule.bzl",
    deps = [":my_rule"],
)
EOF

cat >my_rule.bzl <<EOF
load("@rules_go//go:def.bzl", "go_test")

def go_helper_test(name, **kwargs):
    """A 

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -12,6 +12,7 @@ bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "rules_proto", version = "7.0.2")
 bazel_dep(name = "protobuf", version = "29.0-rc2.bcr.1", repo_name = "com_google_protobuf")
 bazel_dep(name = "rules_shell", version = "0.3.0")
+bazel_dep(name = "rules_cc", version = "0.1.5")
 
 go_sdk = use_extension("//go:extensions.bzl", "go_sdk")
 
