--- a/go/private/BUILD.bazel
+++ b/go/private/BUILD.bazel
@@ -65,6 +65,7 @@ bzl_library(
         "@bazel_tools//tools/build_defs/cc:action_names.bzl",
         "@bazel_tools//tools/cpp:toolchain_utils.bzl",
         "@io_bazel_rules_nogo//:scope.bzl",
+        "@rules_cc//cc:find_cc_toolchain_bzl",  # Transitive dep of @bazel_tools//tools/cpp:toolchain_utils.bzl
     ],
 )
 
